force-app/main/default/objects/PIBank__c/PIBank__c.object-meta.xml
<CustomObject>
    <label>PROC Order Line+Bank</label>
    <nameField>
        <displayFormat>PIB-{000000}</displayFormat>
        <label>P/I+BANK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PROC Order Line+Bank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>