force-app/main/default/objects/PIBank__c/fields/UnpaidBalancePILocalForBank__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalancePILocalForBank__c</fullName>
    <label>UNPAID BALANCE P/I(LOCAL)-FOR BANK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>