force-app/main/default/objects/PIBank__c/fields/UnpaidBalancePIUSDForBank__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalancePIUSDForBank__c</fullName>
    <label>UNPAID BALANCE P/I(USD)-FOR BANK</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>