force-app/main/default/objects/PIBank__c/fields/UnpaidBalancePIUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalancePIUSDFormula__c</fullName>
    <formula>PurchasingInvoiceID__r.UnpaidBalance__c</formula>
    <label>UNPAID BALANCE P/I(USD)-FORMULA</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>